--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ ul li:hover .submenu {
   }
 }
 
-@media (max-width: 630px) {
+@media (max-width: 630px) and (max-width: 380px){
   .skills {
     display: block;
   }
