--- a/styles.css
+++ b/styles.css
@@ -403,6 +403,9 @@ ul li:hover .submenu {
     padding-top: 265px;
   }
 
+  .top-part {
+    margin-top: 100px;
+
   .myimage {
     width: 60%;
   }
