--- a/styles.css
+++ b/styles.css
@@ -403,7 +403,11 @@ ul li:hover .submenu {
     padding-top: 200px;
   }
 
+  .top-part {
+    margin-top: -50px;
+  }
+
   .myimage {
-    width: 30%;
+    width: 40%;
   }
 }
