--- a/My Website's style.css
+++ b/My Website's style.css
@@ -175,10 +175,14 @@ li {
 
 @media (max-width: 380px) {
   .lady {
-    width: 40%;
+    width: 90%;
   }
   
   .container {
     font-size: smaller;
+  }
+  
+  .nav {
+    height: 13.5%;
   }
 }
