--- a/styles.css
+++ b/styles.css
@@ -224,8 +224,8 @@ ul li:hover .submenu {
     font-size: 25px;
 }
 .social i{
-    margin: 0 5% 0 0;
-    color: #DFDFDE;
+    margin: 0 2% 0 0;
+    color: white;
     cursor: pointer ;
 }
 
