--- a/styles.css
+++ b/styles.css
@@ -225,7 +225,7 @@ ul li:hover .submenu {
     font-size: 25px;
 }
 .social i{
-    margin: auto;
+    margin: 0 2% 0 0;
     color: white;
     cursor: pointer ;
 }
