--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,7 @@ ul li:hover .submenu {
 .profile i{
     font-size: 25px;
     margin: 0 1% 0 1%;
-    color: white;
+    color: #5b8a72;
     cursor: pointer;
 }
 
